welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: ')' expected but integer literal found.
for (i<-0 to (T.length.-1)){
                        ^indexOfValue:8: error: ')' expected but '}' found.
}
^